Added Video in QuizAnswer
